--- a/style.css
+++ b/style.css
@@ -44,3 +44,23 @@ h1 {
     border-radius: 25px;
 
 }
+
+
+
+
+.part-2 {
+    margin: 0px;
+    display: flex;
+    padding-top: 100px;
+    padding-left: 100px;
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.brif2 {
+
+    margin-left: 200px;
+    margin-right: 100px;
+
+}
