--- a/style.css
+++ b/style.css
@@ -64,3 +64,32 @@ h1 {
     margin-right: 100px;
 
 }
+
+.exparience {
+    display: flex;
+    padding-bottom: 100px;
+
+}
+
+.exp {
+    width: 40%;
+    margin-left: 10px;
+    padding-left: 100px;
+    border-radius: 10px;
+    box-shadow: 20px 20px 20px yellowgreen;
+    blur
+}
+
+.hadding-3 {
+    padding-left: 100px;
+}
+
+h1 {
+    font-size: 50px;
+    padding-left: 100px;
+}
+
+.part-3 {
+
+    padding-top: 100px;
+}
